# egobench

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: pipeline-phases.md  pricing.md  scoring.md
egobench/: __init__.py  cli.py  config.py  db.py  paths.py  privacy.py
egobench/cost/: __init__.py  estimator.py  tracker.py
egobench/eval/: judge.py  runner.py  score.py
egobench/ingest/: __init__.py  base.py  chatgpt.py  claude.py  jsonl.py  registry.py
egobench/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_client.py  pricing.py  recorded.py
egobench/pipeline/: __init__.py  cache.py  json_utils.py  phase1_ingest.py  phase2_drop_nontasks.py  phase3_embed_cluster.py  phase4_categorize.py  phase5_importance.py  phase6_sample.py  phase7_checklist.py  phase8_lock.py  runner.py  schema.py
egobench/reporting/: html.py  leaderboard.py  markdown.py  radar.py
egobench/review/: __init__.py  app.py
egobench/review/widgets/: __init__.py  importance_slider.py
scripts/: privacy_filter_server.py
tests/fixtures/: chatgpt_export_sample.json  claude_export_sample.json  generic_sample.jsonl
tests/integration/: test_cli_pipeline.py
tests/unit/: test_cost_estimator.py  test_ingest.py  test_judge_panel.py  test_openai_client.py  test_openrouter_routing.py  test_phase7_checklist.py  test_privacy.py  test_recorded_client.py  test_report_html.py  test_score.py  test_task_family_pipeline.py
